--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,3 +17,5 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_REACT_TEST_APP_2_2D443 }}
           channelId: live
           projectId: react-test-app-2-2d443
+       env:
+         FIREBASE_CLI_EXPERIMENTS: webframeworks
